--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,11 @@
     box-sizing: border-box;
     font-family: "Oswald", sans-serif;
 }
+
+header {
+    width: 100%;
+    height: 100px;
+    background-color: rgb(43, 146, 241);
+    background-image: url(../img/pattern.png);
+    background-size: 15%;
+}
