--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ header>img {
     width: 200px
 }
 
-main.container {
+main.container,
+footer {
     max-width: 1200px;
     margin-top: 30px;
     margin-left: auto;
@@ -67,4 +68,24 @@ tr:nth-child(odd) {
 .intestazione {
     color: white;
     background-color: rgb(43, 146, 241);
+}
+
+footer {
+    color: gray;
+}
+
+.square {
+    width: 300px;
+    height: 250px;
+    color: white;
+    font-size: 26px;
+    margin: 20px 0px 20px 0px;
+}
+
+.square.first {
+    background-image: url(/img/monitor.jpg);
+}
+
+.square.second {
+    background-image: url(/img/graph.jpg);
 }
