--- a/css/style.css
+++ b/css/style.css
@@ -5,27 +5,27 @@
     font-family: "Roboto", sans-serif;
 }
 
+body {
+    max-width: 1200px;
+    margin: auto;
+}
+
 header {
-    width: 100%;
     height: 100px;
     background-color: rgb(43, 146, 241);
     background-image: url(../img/pattern.png);
     background-size: 370px;
     padding-top: 50px;
-    padding-left: 25%;
+    padding-left: 150px;
 }
 
 header>img {
     width: 200px
 }
 
-main.container,
+main#container,
 footer {
-    max-width: 1200px;
     margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
-
 }
 
 h1 {
@@ -33,17 +33,17 @@ h1 {
     font-size: 48px;
 }
 
-.title>p {
+#title>p {
     color: gray;
     font-size: large;
     font-weight: 400;
 }
 
-.title span {
+#title span {
     color: rgba(0, 206, 209, 0.507);
 }
 
-.gallery {
+#gallery {
     margin-top: 20px;
     font-size: small;
 }
@@ -84,8 +84,12 @@ footer {
 
 .square.first {
     background-image: url(/img/monitor.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 .square.second {
     background-image: url(/img/graph.jpg);
+    background-size: cover;
+    background-position: center;
 }
