--- a/css/style.css
+++ b/css/style.css
@@ -78,8 +78,10 @@ footer {
     width: 300px;
     height: 250px;
     color: white;
+    font-weight: 600;
     font-size: 26px;
     margin: 20px 0px 20px 0px;
+    padding: 20px;
 }
 
 .square.first {
