--- a/css_standard/style_standard.css
+++ b/css_standard/style_standard.css
@@ -80,13 +80,13 @@ footer {
 }
 
 .square.first {
-    background-image: url(/img/monitor.jpg);
+    background-image: url(../img/monitor.jpg);
     background-size: cover;
     background-position: center;
 }
 
 .square.second {
-    background-image: url(/img/graph.jpg);
+    background-image: url(../img/graph.jpg);
     background-size: cover;
     background-position: center;
 }
