--- a/bonus/css/style_bonus.css
+++ b/bonus/css/style_bonus.css
@@ -5,14 +5,14 @@
     font-family: "Roboto", sans-serif;
 }
 
+
 header {
     height: 100px;
     background-color: rgb(43, 146, 241);
     background-image: url(../img/pattern.png);
     background-size: 370px;
     padding-top: 50px;
-    padding-left: 5px;
-
+    padding-left: 285px;
 }
 
 header>img {
@@ -21,7 +21,8 @@ header>img {
 
 main,
 footer {
-    margin: 30px 5px;
+    max-width: 1200px;
+    margin: 30px auto;
 }
 
 h1 {
@@ -65,7 +66,6 @@ th:last-child {
     width: 60%;
 }
 
-
 th {
     text-align: left;
     color: white;
@@ -75,6 +75,7 @@ th {
 tr:nth-child(odd) {
     background-color: rgba(0, 206, 209, 0.507);
 }
+
 
 footer {
     color: gray;
